Resolves: tdf#144783 shift+RETURN not searching backwards

In gtk nothing is happening, in gen its searching forwards.  Align
backends so that Activate is emitted only on a bare return in both and
then handle shift+RETURN explicitly for the search widget

Change-Id: I142002bbaf6b3aca83800a442096a4b1024fe097