vcl/source/control/edit.cxx
@@ -1675,10 +1675,8 @@ bool Edit::ImplHandleKeyEvent( const KeyEvent& rKEvt )
             break;
 
             case KEY_RETURN:
-                if (maActivateHdl.IsSet())
-                {
+                if (maActivateHdl.IsSet() && !rKEvt.GetKeyCode().GetModifier())
                     bDone = maActivateHdl.Call(*this);
-                }
             break;
 
             default:
